# ChangeLog for dev-perl/CPAN-Mini
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/CPAN-Mini/ChangeLog,v 1.28 2009/12/24 20:35:13 tove Exp $

  24 Dec 2009; Torsten Veller <tove@gentoo.org> -CPAN-Mini-0.571.ebuild:
  Cleanup

  14 Nov 2009; Torsten Veller <tove@gentoo.org> CPAN-Mini-0.576.ebuild:
  Depend on virtual/perl-File-Path

*CPAN-Mini-0.576 (13 Nov 2009)

  13 Nov 2009; Robin H. Johnson <robbat2@gentoo.org>
  +CPAN-Mini-0.576.ebuild:
  Version bump via perl-bump experimental tool.

  19 Jul 2009; Torsten Veller <tove@gentoo.org> CPAN-Mini-0.562.ebuild,
  CPAN-Mini-0.571.ebuild:
  IO-Compress replaces Compress-Zlib

  18 Nov 2008; Torsten Veller <tove@gentoo.org> CPAN-Mini-0.562.ebuild,
  CPAN-Mini-0.571.ebuild:
  New virtuals: Compress-Zlib

  02 Aug 2008; Torsten Veller <tove@gentoo.org> -CPAN-Mini-0.40.ebuild,
  -CPAN-Mini-0.551.ebuild, -CPAN-Mini-0.552.ebuild:
  Cleanup

*CPAN-Mini-0.571 (02 Aug 2008)

  02 Aug 2008; Torsten Veller <tove@gentoo.org> +CPAN-Mini-0.571.ebuild:
  Version bump

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> CPAN-Mini-0.562.ebuild:
  amd64 stable

  06 Oct 2007; Raúl Porcel <armin76@gentoo.org> CPAN-Mini-0.562.ebuild:
  ia64/sparc/x86 stable

*CPAN-Mini-0.562 (07 Jul 2007)

  07 Jul 2007; Michael Cummings <mcummings@gentoo.org>
  +CPAN-Mini-0.562.ebuild:
  Version bump

  05 Jul 2007; Raúl Porcel <armin76@gentoo.org> CPAN-Mini-0.552.ebuild:
  ia64/x86 stable

  10 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  CPAN-Mini-0.552.ebuild:
  sparc stable

  08 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  CPAN-Mini-0.552.ebuild:
  Marking amd64 stable

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> CPAN-Mini-0.551.ebuild:
  Stable on x86, bug #169152.

  22 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> CPAN-Mini-0.551.ebuild:
  Stable on IA64.

*CPAN-Mini-0.552 (21 Jan 2007)
