@@ -1,13 +1,14 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/CPAN-Mini/Attic/CPAN-Mini-0.576.ebuild,v 1.3 2009/11/14 13:00:58 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/CPAN-Mini/Attic/CPAN-Mini-0.576.ebuild,v 1.4 2010/01/28 21:12:38 tove Exp $
+
+EAPI=2
 
 MODULE_AUTHOR=RJBS
 inherit perl-module
 
 DESCRIPTION="create a minimal mirror of CPAN"
 
-LICENSE="Artistic"
 SLOT="0"
 KEYWORDS="~amd64 ~ia64 ~sparc ~x86"
 IUSE=""
