@@ -4,13 +4,13 @@ Hash: SHA1
 DIST CPAN-Mini-0.562.tar.gz 16125 RMD160 4e2b1ebd0312e62b745fd40efd616ec2121ec0f9 SHA1 7946732e7ea15c3d72f79b9b972cf198c496b1c2 SHA256 561a1fd3fb213a5c3b06b2276a62c647031d0c3bf996da8f3263066ce3c91574
 DIST CPAN-Mini-0.576.tar.gz 30838 RMD160 72afe33222cdc1935c1c0ca7946a1ccd771cb7d3 SHA1 f584fcb1faaa7285ead1d9a6dcea2a822bd97856 SHA256 b669bc962ff189ffec85fb0119fa2da1e7111a12ed8738a2586da49497ced5a2
 EBUILD CPAN-Mini-0.562.ebuild 595 RMD160 6ba1875871676a1f0e3cdfdc2be9d02458ae11a1 SHA1 169fa6599ccd0081029b32f12fe15eca69e1f4cd SHA256 4102e8d82e37447e15380f3ead746b162a72e3614644efcaa2678422ea3b3146
-EBUILD CPAN-Mini-0.576.ebuild 528 RMD160 5a9c676cdff8ed9912f9a721228af1c90d741476 SHA1 2231d9b5bb9bd0942178bde23acccbf0ecf2ec19 SHA256 6c3ac90ed17095e2248535ba6c8d958105aff5c9ca1fdcf5ee73bda6cc0b8992
-MISC ChangeLog 3634 RMD160 b2b642e4ae84ec4044bd86c75fe8cbf720d49ac3 SHA1 069507325ff76e2f2ebf4f6a6dbba515af7cb348 SHA256 4d32d64540889872df5ee001bec57c00e2e57df857962405aeae6fd4f5147e39
+EBUILD CPAN-Mini-0.576.ebuild 517 RMD160 7eb51e57a5b867c972be4e7b5b1dd96874f73e95 SHA1 e30f2889b8dc3ae8b74abf1490cc2f7d30d3d9b8 SHA256 402255068febbf625c76ff96a73ca5628901614dbf2dfba6fa143e5a6cfcf156
+MISC ChangeLog 3751 RMD160 8a65a79d52eac2cd58df6675a3387161eccb7fe0 SHA1 3219dbbb081a7e7bb77c5ae586c5225501ef254e SHA256 e71e9d8abf5e856764f0ba8cc11c9795d40d4f3f8dfed3e562bf74f2f70b89ba
 MISC metadata.xml 389 RMD160 d3eef420f6f39fd5bcd093fbf171ac9c98cbb0a1 SHA1 acf928ace34f861dc2ed24c53eaf4ac3441210df SHA256 cef73926b9b04636df537f5ccaae8cc448e28c158c222d675c40575d421d6175
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAksz0IcACgkQV3J2n04Eaux6AACeN+VZnrjUr8qtXIUdicUossvZ
-gSkAn2gjQomTBIAa/1MAvdkFyeBN9dqM
-=R1Mz
+iEYEARECAAYFAkth/cwACgkQV3J2n04EauxKRQCfd9ouqYRdRa5HogWsAUv1lLyU
+q/kAn3bKDTaMTefvGJe8Nv8AGwoYqr9Y
+=FAeM
 -----END PGP SIGNATURE-----
