@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/CPAN-Mini
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/CPAN-Mini/ChangeLog,v 1.28 2009/12/24 20:35:13 tove Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/CPAN-Mini/ChangeLog,v 1.29 2010/01/28 21:12:38 tove Exp $
+
+  28 Jan 2010; Torsten Veller <tove@gentoo.org> CPAN-Mini-0.576.ebuild:
+  Fix LICENSE: same terms as perl (#301969)
 
   24 Dec 2009; Torsten Veller <tove@gentoo.org> -CPAN-Mini-0.571.ebuild:
   Cleanup
